anchor color fix on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,14 @@ body {
   align-self: center;
   color: white;
 }
+.whatsapp_rectangle a {
+  color: white;
+  text-decoration: none;
+}
+
+.whatsapp_rectangle a:hover {
+  color: white;
+}
 
 .whatsapp_rectangle i {
   font-size: 1.5rem;
@@ -173,11 +181,11 @@ body {
   padding: 80px 0px;
 }
 
-a {
+.btn-subito {
   text-decoration: none;
   color: white;
 }
-a:hover {
+.btn-subito:hover {
   color: white;
 }
 
@@ -201,6 +209,8 @@ a:hover {
   border-radius: 50%;
   font-size: 1.5rem;
   margin: auto;
+  text-align: center;
+  justify-content: center;
   padding: 10px;
 }
 
